--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_all"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/group"
             android:title="@string/menu_all_guests" />
         <item
             android:id="@+id/nav_present"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/present"
             android:title="@string/menu_presents" />
         <item
             android:id="@+id/nav_absents"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/absent"
             android:title="@string/menu_absents" />
     </group>
 </menu>
