--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -14,7 +14,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Nome"
+        android:text="@string/agfnome"
+        android:textSize="18sp"
         />
 
     <EditText
@@ -32,7 +33,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_name"
-        android:text="Confirmação"/>
+        android:text="@string/adfconfirmação"
+        android:textSize="18sp"/>
 
     <RadioGroup
         android:layout_width="0dp"
@@ -45,13 +47,15 @@
             android:id="@+id/radio_presence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Presente"/>
+            android:text="@string/adfpresent"
+            android:textSize="18sp"/>
 
         <RadioButton
             android:id="@+id/radio_absent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ausente"/>
+            android:text="@string/adfabsent"
+            android:textSize="18sp"/>
 
     </RadioGroup>
 
@@ -59,7 +63,7 @@
         android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SALVAR"
+        android:text="@string/adfsave"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
